--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -5,14 +5,15 @@
 // Variables
 @import 'variables';
 
-// Bootstrap 把bst拔掉
-// @import '~bootstrap/scss/bootstrap';
+// iview
+@import '~iview/dist/styles/iview.css';
 
 // Common
 @import 'common/normalize';
 @import 'common/utilities';
 @import 'common/mixin';
 @import 'common/animations';
+@import 'common/ivelement';
 
 // Page
 @import 'pages/nav';
