Fixed deleteCard function

--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -6,7 +6,8 @@
 @import 'variables';
 
 // iview
-@import '~iview/dist/styles/iview.css';
+// https://github.com/parcel-bundler/parcel/issues/39
+@import url('../../../node_modules/iview/dist/styles/iview.css');
 
 // Common
 @import 'common/normalize';
