--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -20,6 +20,7 @@
 @import 'pages/header';
 @import 'pages/login';
 @import 'pages/content';
+@import 'pages/card';
 
 // MOMO
 @import 'common/ivelement';
