--- a/src/assets/sass/pages/content.scss
+++ b/src/assets/sass/pages/content.scss
@@ -3,8 +3,8 @@
     width: 100%;
     box-sizing: border-box;
     .ivu-col {
-        height: 100vh;   // 是否改為 flex格局？
-        overflow: visible; // 是否改為 flex格局？
+        height: calc(100vh - 76px);   // 綁定Nav
+        overflow: auto;
         border-right: 1px $black solid;
         background-color: $lightWhite;
         &:last-child {
@@ -18,9 +18,9 @@
         }
         .ivu-dropdown {
             position: absolute;
-            right: 20px;
+            right: 30px;
         }
-        .union {
+        .union {           
            h4 {
             padding: 10px;
            }
