--- a/src/assets/sass/pages/content.scss
+++ b/src/assets/sass/pages/content.scss
@@ -2,31 +2,34 @@
     margin: 0 auto;
     width: 100%;
     box-sizing: border-box;
-    .ivu-col {
-        height: calc(100vh - 76px);   // 綁定Nav
-        overflow: auto;
-        border-right: 1px $black solid;
-        background-color: $lightWhite;
-        &:last-child {
-            border-right: 0;
+    &.page {
+        .ivu-col {
+            height: calc(100vh - 76px);   // 綁定Nav
+            overflow: auto;
+            border-right: 1px $black solid;
+            background-color: $lightWhite;
+            &:last-child {
+                border-right: 0;
+            }
+            .title {
+                text-align: center;
+                font-weight: bold;
+                padding: 15px;
+                background-color: $Gray;
+                border-bottom: 1px $black solid;
+            }
+            .ivu-dropdown {
+                position: absolute;
+                right: 30px;
+            }
+            .union {           
+               h4 {
+                padding: 10px;
+               }
+               .setting {
+                   p { display: inline-block; }
+               }
+            }
         }
-        .title {
-            text-align: center;
-            padding: 15px;
-            background-color: $Gray;
-            border-bottom: 1px $black solid;
-        }
-        .ivu-dropdown {
-            position: absolute;
-            right: 30px;
-        }
-        .union {           
-           h4 {
-            padding: 10px;
-           }
-           .setting {
-               p { display: inline-block; }
-           }
-        }
-    }
+    }    
 }
